kubernetes/k8s-install-yaml/node-statefulset-test.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-node
  labels:
    app: node
    release: v1
spec:
  selector:
    matchLabels:
      app: node
      release: v1
  replicas: 4
  template:
    metadata:
      labels:
        app: node
        release: v1
    spec:
      containers:
      - name: node-pod
        image: node:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node
    release: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
