kubernetes/k8s-install-yaml/node-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node
    release: v1
spec:
  selector:
    matchLabels:
      app: node
      release: v1
  template:
    metadata:
      name: node
      labels:
        app: node
        release: v1
    spec:
      containers:
      - name: node-pod
        image: node:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

---

apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node
    release: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
